# levikno

./: .gitignore  CMakeLists.txt  README.md
.cache/clangd/index/: Main.cpp.0F83DE7B3FF812AE.idx  Main.cpp.6A32A7487C551139.idx  Main.cpp.BAE546E2E98B9662.idx  context.c.61A327D889715165.idx  context.c.61ACEB11765E17C3.idx  context.c.6B0A2FF553E14569.idx  egl_context.c.45E362646DF25EDD.idx  egl_context.c.63D2853601E5F146.idx  egl_context.c.7BF1757995CA375A.idx  glad.c.27FC454EF26C62BD.idx  glad.c.73C15C356560F553.idx  glad.c.CF1923FA61118A40.idx  glad.h.14AA381499CE10EA.idx  glad.h.4E26D69C22E33C53.idx  glad.h.5DB5E60647224806.idx  glfw3.h.01DF6F07D8461BBD.idx  glfw3.h.4FDB0AF4B8345DF3.idx  glfw3.h.D55E65BCA5E12219.idx  glslang_c_interface.h.5470A1F887CC3B71.idx  glslang_c_interface.h.9D8B9EC8ED451893.idx  glslang_c_interface.h.D6CC46279259DD67.idx  glslang_c_shader_types.h.68A2DBA707D48AAD.idx  glslang_c_shader_types.h.7A627ACA920EBB24.idx  glslang_c_shader_types.h.8E8CD959EE1E507C.idx  glx_context.c.1104A9D6E58CEFAC.idx  glx_context.c.7E260E9C688B7A32.idx  glx_context.c.F8A963106C42136E.idx  imconfig.h.3E67A30A634ACC23.idx  imgui.cpp.0335864B70E9DA11.idx  imgui.h.61CE5DC17C7DEAD6.idx  imgui_demo.cpp.C722FE57862C8276.idx  imgui_draw.cpp.A02A1ECDCEF2F7E4.idx  imgui_impl_glfw.cpp.9B74B45E30D1041C.idx  imgui_impl_glfw.h.901F5FCFF1156F36.idx  imgui_impl_vulkan.cpp.68AD7943DB55FE9E.idx  imgui_impl_vulkan.h.952AB1D14566E4DE.idx  imgui_internal.h.872522A9FE398B34.idx  imgui_tables.cpp.875B54CD669EE5C7.idx  imgui_widgets.cpp.EA0E45455B643504.idx  imstb_rectpack.h.D4C38C7AED0C142E.idx  (+181 more)
Levikno/include/levikno/: Core.h  Graphics.h  levikno.h
Levikno/src/: levikno.cpp  levikno_internal.h  lvn_loadModel.cpp  lvn_loadModel.h
Levikno/src/Core/: core_internal.cpp  core_internal.h
Levikno/src/Graphics/: graphics_internal.cpp  graphics_internal.h
Levikno/src/Platform/Window/glfw/: lvn_glfw.cpp  lvn_glfw.h
Levikno/src/Platform/api/vulkan/: lvn_vulkan.cpp  lvn_vulkan.h  lvn_vulkanBackends.h
Levikno/src/dependencies/stb/include/: stb_image.cpp
Levikno/src/platform/api/vulkan/: lvn_vulkan.cpp  lvn_vulkan.h  lvn_vulkanBackends.h
Levikno/src/platform/window/glfw/: lvn_glfw.cpp  lvn_glfw.h
LeviknoEditor/res/models/rustCube/: rustCube.gltf
LeviknoEditor/res/models/shapes/: shapes.gltf
LeviknoEditor/res/shaders/: pbr.frag  pbr.vert  pbrFrag.spv  pbrVert.spv  vk.frag  vk.vert  vkCubeFrag.spv  vkCubeVert.spv  vkFB.frag  vkFB.vert  vkFBfrag.spv  vkFBvert.spv  vkcubemap.frag  vkcubemap.vert  vkfrag.spv  vkvert.spv
LeviknoEditor/src/: Main.cpp
docs/: GettingStarted.md  tutorial.md
examples/: 2dScene.cpp  CMakeLists.txt  antiAliasing.cpp  basicUsage.cpp  bindlessTexture.cpp  colorBlending.cpp  copy.cpp  cubemap.cpp  entityComponentSystem.cpp  events.cpp  framebuffer.cpp  loadingModel.cpp  loadingShader.cpp  logging.cpp  loggingToFile.cpp  memoryPool.cpp  pbrScene.cpp  pbrSpheres.cpp  pong.cpp  renderer2d.cpp  shaderLoading.cpp  simpleMatrix.cpp  simpleSound.cpp  simpleText.cpp  simpleTexture.cpp  simpleTriangle.cpp  simpleWindow.cpp  twoTextures.cpp  twoWindows.cpp
examples/basicScene/res/models/cube/: cube.gltf
examples/basicScene/res/shaders/: vk.vert  vkcubemap.vert
examples/basicScene/src/: Main.cpp
examples/res/models/: sphere.glb  teapot.gltf
examples/res/models/teapot/: teapot.gltf
examples/res/shaders/: shaderLoading.frag  shaderLoading.vert  shaderLoadingVert.spv
examples/simpleTriangle/: simpleTriangle.cpp
include/levikno/: levikno.h  lvn_ecs.h  lvn_renderer.h
src/: levikno.cpp  levikno_internal.h  lvn_cds.cpp  lvn_ecs.cpp  lvn_loadModel.cpp  lvn_loadModel.h  lvn_renderer.cpp  lvn_renderer2d.cpp
src/api/audio/: lvn_audio.cpp  lvn_audio.h
src/api/graphics/opengl/: lvn_opengl.cpp  lvn_opengl.h  lvn_openglBackends.h
src/api/graphics/vulkan/: lvn_vulkan.cpp  lvn_vulkan.h  lvn_vulkanBackends.h
src/api/loaders/: lvn_loader_gltf.cpp  lvn_loader_obj.cpp  lvn_loaders.h
src/api/window/glfw/: lvn_glfw.cpp  lvn_glfw.h
